--- a/preamble.tex
+++ b/preamble.tex
@@ -127,7 +127,7 @@
 \degreemonth{August}
 \degreeyear{2018}
 \chair{Jennifer Pfeifer}
-\committee{Sanjay Srivastava    & Core Member \\
+\committee{Sanjay Srivastava    & Co-Chair \\
            Elliot Berkman    & Core Member \\
            Nicole Giuliani & Institutional Representative \\}
 \graddean{Sara Hodges}
@@ -184,13 +184,7 @@ Self-report trait instruments performed well, but a more comprehensive taxonomy 
 \publication{} % extra empty publication is neccessary 
 
 \acknowledge{
-To analogize in a loose and bizarre fashion, one might liken the contribution to the totality of human knowledge of a dissertation such as this one to the contribution of the mass of a single tardigrade to that of the planet Jupiter.
-One also might liken the expendature of effort among a vast coordinated social network necessary to accomplish both feats.
-Over the next few paragraphs, I will attempt to laud those who are share, really, the lions share of the responsibility for what is culminated in these pages.
-
-Let's start at the beginning: 
-My mom, who tried to convince me before I was ready that the equality 2x = 4 was an interesting construction, who decided in her late 30s, with two kids, to earn a BA in finance, and who then became the first person in her family to get a graduate degree (in counseling).
-My dad, whose sense of justice and service is a constant touch stone as I and others navigate a renaissance in scientific practice.
+Thanks to all (this is a placeholder).
 }
 \dedication{
 This is your optional dedication text;
