--- a/dissertation.bib
+++ b/dissertation.bib
@@ -773,7 +773,7 @@ There are epistemological difficulties in this theory. Risk, the brain, and adol
   journaltitle = {Developmental Psychology},
   date = {1996},
   pages = {435-441},
-  keywords = {*Adolescent Attitudes,*Peer Relations,*Social Acceptance,*Social Perception,*Status,Goals,Human Sex Differences},
+  keywords = {*Peer Relations,*Social Acceptance,*Status,*Social Perception,*Adolescent Attitudes,Goals,Human Sex Differences},
   author = {Jarvinen, Denis W. and Nicholls, John G.},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/42AMGCUC/Jarvinen and Nicholls - 1996 - Adolescents' social goals, beliefs about the cause.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/6H7GKSBU/Jarvinen and Nicholls' - Adolescents' Social Goals, Beliefs About the Cause.pdf}
 }
@@ -7380,6 +7380,103 @@ These results demonstrate a need for sexual education programs and policy to be 
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/E6CP5VHQ/Wentzel - 2003 - Sociometric Status and Adjustment in Middle School.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/JFZ2YN65/summary.html}
 }
 
+@article{hatzichristou,
+  langid = {english},
+  title = {A {{Multiperspective Comparison}} of {{Peer Sociometric Status Groups}} in {{Childhood}} and {{Adolescence}}},
+  pages = {19},
+  author = {Hatzichristou, Chryse and Hopf, Diether},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/QRBSSCNU/A Multiperspective Comparison of Peer Sociometric .pdf}
+}
+
+@article{bukowski2017,
+  langid = {english},
+  title = {The {{Current Status}} of {{Peer Assessment Techniques}} and {{Sociometric Methods}}: {{The Current Status}} of {{Peer Assessment Techniques}} and {{Sociometric Methods}}},
+  volume = {2017},
+  issn = {15203247},
+  url = {http://doi.wiley.com/10.1002/cad.20209},
+  doi = {10.1002/cad.20209},
+  shorttitle = {The {{Current Status}} of {{Peer Assessment Techniques}} and {{Sociometric Methods}}},
+  abstract = {Current issues in the use of peer assessment techniques and sociometric methods are discussed. Attention is paid to the contributions of the four articles in this volume. Together these contributions point to the continual level of change and progress in these techniques. They also show that the paradigm underlying these methods has been unchanged for decades. It is argued that this domain is ripe for a paradigm change that takes advantage of recent developments in statistical techniques and technology. © 2017 Wiley Periodicals, Inc.},
+  number = {157},
+  journaltitle = {New Directions for Child and Adolescent Development},
+  urldate = {2018-08-30},
+  date = {2017-09},
+  pages = {75-82},
+  author = {Bukowski, William M. and Castellanos, Melisa and Persram, Ryan J.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/KDW3KM87/Bukowski et al. - 2017 - The Current Status of Peer Assessment Techniques a.pdf}
+}
+
+@article{jiang2005,
+  langid = {english},
+  title = {Stability of Continuous Measures of Sociometric Status: A Meta-Analysis☆},
+  volume = {25},
+  issn = {02732297},
+  url = {http://linkinghub.elsevier.com/retrieve/pii/S0273229704000395},
+  doi = {10.1016/j.dr.2004.08.008},
+  shorttitle = {Stability of Continuous Measures of Sociometric Status},
+  abstract = {A meta-analytic review was conducted of 77 studies including 93 samples and 18,339 participants that examine both the short-term and long-term stability of four continuous dimensions of sociometric status: acceptance, rejection, social preference, and peer ratings. A large mean short-term stability was found for each dimension, indicating good test–retest reliability of sociometric measurements. Weighted least square regression analysis revealed that longterm stability was inﬂuenced by four factors: childrenÕs age, gender, the length of the time interval across which stability was examined, and the year the study was published. The current study provides evidence for good reliability and high stability of continuous dimensions of peer status in childhood and adolescence.},
+  number = {1},
+  journaltitle = {Developmental Review},
+  urldate = {2018-08-30},
+  date = {2005-03},
+  pages = {1-25},
+  author = {Jiang, X. Lu and Cillessen, Antonius H.N.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/QV79GN6I/Jiang and Cillessen - 2005 - Stability of continuous measures of sociometric st.pdf}
+}
+
+@article{rodkin2013,
+  langid = {english},
+  title = {Social Goals, Social Behavior, and Social Status in Middle Childhood.},
+  volume = {49},
+  issn = {1939-0599, 0012-1649},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/a0029389},
+  doi = {10.1037/a0029389},
+  abstract = {This study examines motivational precursors of social status and the applicability of a dual-component model of social competence to middle childhood. Concurrent and longitudinal relationships between self-reported social goals (social development, demonstration-approach, demonstration-avoid goal orientations), teacher-rated prosocial and aggressive behavior, and peer nominations of social status (preference, popularity) were examined over the course of an academic year among 980 3rd- to 5th-grade children. Findings support dual-component expectations. Confirmatory factor analyses verified the expected 3-factor structure of social goals and 2-factor structure of social status. Structural equation modeling (SEM) found that (a) social development goals were associated with prosocial behavior and increased preference, and (b) demonstration-approach goals were associated with aggressive behavior and increased popularity. Demonstration-avoid goals were associated with a popularity decrease. SEMs were invariant across grade, gender, and ethnicity. Discussion concerns the potential risks of high social status, extensions to the dual-component model, and the generality of an achievement goal approach to child social development.},
+  number = {6},
+  journaltitle = {Developmental Psychology},
+  urldate = {2018-08-30},
+  date = {2013},
+  pages = {1139-1150},
+  author = {Rodkin, Philip C. and Ryan, Allison M. and Jamison, Rhonda and Wilson, Travis},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/YV66L4Q3/Rodkin et al. - 2013 - Social goals, social behavior, and social status i.pdf}
+}
+
+@article{ojanen2005,
+  langid = {english},
+  title = {An {{Interpersonal Circumplex Model}} of {{Children}}'s {{Social Goals}}: {{Links With Peer}}-{{Reported Behavior}} and {{Sociometric Status}}.},
+  volume = {41},
+  issn = {1939-0599, 0012-1649},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0012-1649.41.5.699},
+  doi = {10.1037/0012-1649.41.5.699},
+  shorttitle = {An {{Interpersonal Circumplex Model}} of {{Children}}'s {{Social Goals}}},
+  abstract = {The objective of the present research was to develop an assessment model for children’s social goals. The aims were (a) to fit children’s social goals to a circumplex model and to examine links between goals and peer-reported social behaviors (aggression, withdrawal, and prosocial behavior) in a sample of 276 participants (134 girls, 11- to 12-year-olds) and (b) to replicate these findings and examine whether social behavior mediates the relationship between goals and sociometric status in an independent cross-validation sample of 310 participants (143 girls, 11- to 13-year-olds). Results showed a satisfactory fit to the circumplex model and adequate psychometric properties of the goal scales of the new measure, the Interpersonal Goals Inventory for Children. Other findings included significant and meaningful relations between goals and peer-reported behavior. Social behavior mediated the relations between goals and sociometric status.},
+  number = {5},
+  journaltitle = {Developmental Psychology},
+  urldate = {2018-08-30},
+  date = {2005},
+  pages = {699-710},
+  author = {Ojanen, Tiina and Grönroos, Matti and Salmivalli, Christina},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/R8QDADND/Ojanen et al. - 2005 - An Interpersonal Circumplex Model of Children's So.pdf}
+}
+
+@article{caravita2012,
+  langid = {english},
+  title = {Agentic or {{Communal}}? {{Associations}} between {{Interpersonal Goals}}, {{Popularity}}, and {{Bullying}} in {{Middle Childhood}} and {{Early Adolescence}}: {{Goals}}, {{Popularity}}, and {{Bullying}}},
+  volume = {21},
+  issn = {0961205X},
+  url = {http://doi.wiley.com/10.1111/j.1467-9507.2011.00632.x},
+  doi = {10.1111/j.1467-9507.2011.00632.x},
+  shorttitle = {Agentic or {{Communal}}?},
+  abstract = {This study investigated whether perceived popularity mediates and/or moderates the association between agentic goals and bullying, and whether sociometric popularity mediates and/or moderates the association between communal goals and bullying. Age and gender differences were also examined. Participants were 276 fourth and ﬁfth graders (middle childhood sample) and 196 seventh and eighth graders (early adolescence sample). Peer status and bullying were assessed with sociometric measures, interpersonal goals with self-reports. The theoretical model included both mediation and moderation effects. An age-related reversal was found in how status mediated the associations between goals and bullying. Sociometric popularity mediated the association of agentic goals with bullying in middle childhood but of communal goals with bullying in early adolescence. Perceived popularity mediated the association of communal goals with bullying in middle childhood but of agentic goals with bullying in early adolescence. In middle childhood, perceived popularity also moderated the effect of agentic goals on bullying. The results were discussed in terms of the role of bullying as a means to enhance status in early adolescence.},
+  number = {2},
+  journaltitle = {Social Development},
+  urldate = {2018-08-30},
+  date = {2012-05},
+  pages = {376-395},
+  author = {Caravita, Simona C. S. and Cillessen, Antonius H. N.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/M9BATCNY/Caravita and Cillessen - 2012 - Agentic or Communal Associations between Interper.pdf}
+}
+
 @software{flournoy2018,
   title = {Jflournoy/Rw-Model-Demo v0.5.0-Alpha},
   url = {https://doi.org/10.5281/zenodo.1407189},
@@ -7387,6 +7484,41 @@ These results demonstrate a need for sexual education programs and policy to be 
   keywords = {_diss},
   author = {Flournoy, John C.},
   doi = {10.5281/zenodo.1407189}
+}
+
+@article{zeger1988,
+  langid = {english},
+  title = {Models for {{Longitudinal Data}}: {{A Generalized Estimating Equation Approach}}},
+  volume = {44},
+  issn = {0006341X},
+  url = {https://www.jstor.org/stable/2531734?origin=crossref},
+  doi = {10.2307/2531734},
+  shorttitle = {Models for {{Longitudinal Data}}},
+  number = {4},
+  journaltitle = {Biometrics},
+  urldate = {2018-09-03},
+  date = {1988-12},
+  pages = {1049},
+  keywords = {_diss},
+  author = {Zeger, Scott L. and Liang, Kung-Yee and Albert, Paul S.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/SY6Y2JYX/Zeger et al. - 1988 - Models for Longitudinal Data A Generalized Estima.pdf}
+}
+
+@article{anduiza2016,
+  langid = {english},
+  title = {Answering {{Without Reading}}: {{IMCs}} and {{Strong Satisficing}} in {{Online Surveys}}},
+  issn = {0954-2892, 1471-6909},
+  url = {https://academic.oup.com/ijpor/article-lookup/doi/10.1093/ijpor/edw007},
+  doi = {10.1093/ijpor/edw007},
+  shorttitle = {Answering {{Without Reading}}},
+  abstract = {Some respondents of online surveys click responses at random. Screeners or instructional manipulation checks (IMC) have become customary for identifying this strong form of satisficing. This research first analyzes the factors that condition IMC failures using an online panel survey carried out in Spain (2011–2015). Our data show that the probability of passing a screener depends mainly on the screener’s difficulty, the individuals’ intrinsic motivations for answering the survey, and past failures. We then address the substantive consequences of omitting those who fail to pass IMCs. We find that this strategy introduces an additional source of bias in descriptive analyses. The article ends with a discussion of the implications that these findings have for the use of IMCs.},
+  journaltitle = {International Journal of Public Opinion Research},
+  urldate = {2018-09-03},
+  date = {2016-05-19},
+  pages = {edw007},
+  keywords = {_diss},
+  author = {Anduiza, Eva and Galais, Carol},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/XAZR59QV/Anduiza and Galais - 2016 - Answering Without Reading IMCs and Strong Satisfi.pdf}
 }
 
 
